# release-script

./: .coveragerc  .editorconfig  .gitconfig  .gitignore  .travis.yml  Aptfile  Dockerfile  LICENSE  Makefile  README.md  app.json  async_subprocess.py  async_subprocess_test.py  bot.py  bot_local.py  bot_local_test.py  bot_test.py  client_wrapper.py  codecov.yml  conftest.py  constants.py  docker-compose.yml  exception.py  finish_release.py  finish_release.sh  finish_release_test.py  fixture.sh  github.py  github_test.py  hello_world.py  lib.py  lib_test.py  markdown.py  markdown_test.py  package.json  publish.py  publish_test.py  pylintrc  pyproject.toml  pytest.ini  (+28 more)
.github/workflows/: ci.yml
test_data/: statuses_failure.json  statuses_no_pr_builds.json  statuses_pending.json  statuses_success.json
util/: release_notes.ejs  release_notes_rst.ejs
