[project]
name = "release-script"
version = "0.1.0"
description = "Slack bot for managing releases"
readme = "README.md"
authors = [
    { name = "MIT Open Learning Engineering", email = "odl-devops@mit.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "packaging==25.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.5",
    "sentry-sdk==2.49.0",
    "tornado==6.5.4",
    "virtualenv==20.36.1",
]

[dependency-groups]
dev = [
    "black==25.12.0",
    "codecov==2.1.13",
    "pdbpp==0.11.7",
    "pylint==4.0.4",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
]
